<resources>
    <string name="app_name">Sisplace-App</string>
    <string name="empresa">Cuerpo de Agentes de Control Metropolitano Quito</string>
    <string name="siglas">CACMQ</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingreso">Ingreso al Sistema</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="agenda">Agenda</string>
    <string name="informacion">Información</string>
    <string name="sitios">Sitios</string>
    <string name="fechas">Fechas</string>
    <string name="administracion">Administración Zonal</string>
    <string name="todos">Todos</string>
    <string name="seleccione">Seleccione la opción de búsqueda</string>
    <string name="infopersonal">Información Personal</string>
    <string name="fotografia">Fotografía</string>
    <string name="visita">Visita los sitios oficiales de la Institución</string>
    <string name="fechaNac">Fecha Nacimiento</string>
    <string name="direccion">Dirección</string>
    <string name="convencional">Teléfono Convencional</string>
    <string name="celular">Celular</string>
    <string name="correo">Correo Electrónico</string>
    <string name="cedula">Cédula</string>
    <string name="actualizar">Actualizar</string>
    <string name="title_activity_ubicacion_evento">Map</string>
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_mapas">Map</string>
    <string name="fechadesde">Fecha Desde</string>
    <string name="fechahasta">Fecha Hasta</string>
    <string name="seleccionefechas">Ingrese rango de fechas</string>
    <string name="buscar">Buscar</string>

</resources>
