<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#367FA9"
    android:orientation="vertical"
    tools:context=".InformacionPersonalActivity">

     <ImageView
        android:id="@+id/imagenId"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/usuarioblue"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/cedula"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="Nombre"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/fechaNac"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"
        android:textSize="14sp" />

    <EditText
    android:id="@+id/etDireccion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:ems="10"
    android:textSize="14sp"
    android:inputType="textPersonName"
    android:text="@string/direccion" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:text="@string/convencional" />

    <EditText
        android:id="@+id/etCelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:text="@string/celular" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:text="@string/correo" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="actualizarInformacion"
        android:text="@string/actualizar" />

    <ImageButton
        android:id="@+id/imgBtnInicioAgenda"
        android:layout_width="89dp"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:onClick="irInicio"
        app:srcCompat="@drawable/inicio" />

</LinearLayout>