<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#367FA9"
    android:visibility="visible"
    tools:context=".PorFechasActivity"
    tools:visibility="visible">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#367FA9"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/usuario"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/seleccionefechas"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etFechaDesde"
                android:layout_width="161dp"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:text="@string/fechadesde"
                android:hint="@string/fechadesde"/>

            <EditText
                android:id="@+id/etFechaHasta"
                android:layout_width="161dp"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:text="@string/fechahasta"
                android:hint="@string/fechahasta"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/buscar"
                android:tooltipText="@string/buscar"
                android:onClick="cargarWebServiceFechas"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idRecyclerFechas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:hapticFeedbackEnabled="false"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imgBtnInicioAgenda"
                android:layout_width="89dp"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="80dp"
                android:onClick="irInicio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/inicio" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>