<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#367FA9"
    android:orientation="vertical"
    tools:context=".InicioActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:text="@string/bienvenido"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/usuario"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/usuarioblue" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="30dp">

        <ImageButton
            android:id="@+id/imgBtnAgenda"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="10dp"
            android:onClick="seleccionAgenda"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/imgBtnInformacion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/agenda" />

        <ImageButton
            android:id="@+id/imgBtnInformacion"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:onClick="seleccionInformacion"
            app:layout_constraintBottom_toBottomOf="@+id/imgBtnAgenda"
            app:layout_constraintEnd_toStartOf="@+id/imgBtnSitios"
            app:layout_constraintStart_toEndOf="@+id/imgBtnAgenda"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/informacion" />

        <ImageButton
            android:id="@+id/imgBtnSitios"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="seleccionSitios"
            app:layout_constraintBottom_toBottomOf="@+id/imgBtnInformacion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgBtnInformacion"
            app:layout_constraintTop_toTopOf="@+id/imgBtnInformacion"
            app:srcCompat="@drawable/sitios" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:textColor="#000000"
            android:text="@string/agenda"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/imgBtnAgenda"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informacion"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/imgBtnInformacion"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sitios"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/quito"
        android:layout_marginTop="20dp"/>

</LinearLayout>