<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#367FA9"
    android:visibility="visible"
    tools:context=".AgendaActivity"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#367FA9"
        android:orientation="vertical"
        android:weightSum="10">



    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/usuario"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="EVENTOS"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="518dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="183dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="133dp"
                android:layout_height="369dp"
                android:layout_marginLeft="50dp"
                app:srcCompat="@drawable/metromujer"
                tools:layout_editor_absoluteX="38dp"
                tools:layout_editor_absoluteY="1dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/seleccione"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imbBtnFechas"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:onClick="seleccionFechas"
                app:srcCompat="@drawable/fechas" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/fechas"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imgBtnAdministracion"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="seleccionAdministracion"
                app:srcCompat="@drawable/administracion" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:text="@string/administracion"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imgBtnTodos"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="seleccionTodos"
                app:srcCompat="@drawable/todos" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/todos"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:hapticFeedbackEnabled="false"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imgBtnInicio"
            android:layout_width="63dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:foregroundGravity="right"
            android:onClick="irInicio"
            app:srcCompat="@drawable/inicio" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>