<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#367FA9"
    android:orientation="vertical"
    tools:context=".InformacionActivity">

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/usuario"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="457dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:hapticFeedbackEnabled="false">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="133dp"
            android:layout_height="369dp"
            android:layout_marginLeft="50dp"
            app:srcCompat="@drawable/metromujer"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imbBtnInforPersonal"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:onClick="irInformacionPersonal"
                app:srcCompat="@drawable/inforpersonal" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/infopersonal"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imgBtnFoto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:onClick="irActualizarFoto"
                app:srcCompat="@drawable/fotografia" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/fotografia"
                android:textColor="#000000"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="center_vertical"
        android:hapticFeedbackEnabled="false"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imgBtnInicioAgenda"
            android:layout_width="63dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:onClick="irInicio"
            app:srcCompat="@drawable/inicio" />
    </LinearLayout>

</LinearLayout>